fix naming handler