@@ -32,67 +32,90 @@ public class CsvPartitionWriterService {
    * Writes the CSV output for the given supplier, splitting it into part files
    * when the number of rows exceeds the configured threshold.
    *
-   * @param csvFilePath base CSV file path
+   * @param workingDirectory base CSV file path
+   * @param fileNameBuilder builder for CSV file names
    * @param typeClass DTO class used for CSV serialization
    * @param sourceSupplier supplier that provides validated export rows
    * @param csvProfile CSV profile used by the serializer
    * @param maxRowsPerPart maximum number of rows per CSV part
-   * @param <C> CSV DTO type
    * @return generated CSV paths in deterministic order
    * @throws IOException if file creation or renaming fails
    */
-  public <C extends CsvExportDto> List<Path> writeCsv(Path csvFilePath,
-                                                      Class<C> typeClass,
-                                                      Supplier<List<C>> sourceSupplier,
+  public <T extends CsvExportDto> List<Path> writeCsv(Path workingDirectory,
+                                                      ExportFileNameBuilder fileNameBuilder,
+                                                      Class<T> typeClass,
+                                                      Supplier<List<T>> sourceSupplier,
                                                       String csvProfile,
                                                       int maxRowsPerPart) throws IOException {
     if (maxRowsPerPart <= 0) {
       throw new IllegalArgumentException("Max rows per part must be positive");
     }
 
-    Supplier<List<C>> partitionedRowsSupplier = new BufferedPageSupplier<>(sourceSupplier, maxRowsPerPart);
+    Supplier<List<T>> partitionedRowsSupplier =
+      new BufferedPageSupplier<>(sourceSupplier, maxRowsPerPart);
+
     List<Path> partPaths = new ArrayList<>();
     int partNumber = 1;
-    List<C> partRows;
+
+    List<T> partRows;
     while (!(partRows = partitionedRowsSupplier.get()).isEmpty()) {
-      Path partPath = buildPartPath(csvFilePath, partNumber++);
-      List<C> currentPartRows = partRows;
-      AtomicBoolean delivered = new AtomicBoolean(false);
-      csvService.createCsv(
-        partPath,
-        typeClass,
-        () -> delivered.compareAndSet(false, true) ? currentPartRows : List.of(),
-        csvProfile
+      Path partPath = workingDirectory.resolve(
+        fileNameBuilder.buildCsvPartFileName(partNumber++)
       );
+
+      writePart(partPath, typeClass, partRows, csvProfile);
       partPaths.add(partPath);
     }
 
     if (partPaths.isEmpty()) {
+      Path csvFilePath = workingDirectory.resolve(fileNameBuilder.buildCsvFileName());
+
       csvService.createCsv(csvFilePath, typeClass, List::of, csvProfile);
+
       return List.of(csvFilePath);
     }
 
     if (partPaths.size() == 1) {
-      Path singlePartPath = partPaths.get(0);
+      Path singlePartPath = partPaths.getFirst();
+      Path csvFilePath = workingDirectory.resolve(
+        fileNameBuilder.buildCsvFileName()
+      );
+
       Files.move(singlePartPath, csvFilePath, StandardCopyOption.REPLACE_EXISTING);
+
       return List.of(csvFilePath);
     }
-    return partPaths;
+
+    return List.copyOf(partPaths);
   }
 
   /**
-   * Builds the file path for a numbered CSV part.
+   * Writes a single CSV partition containing the provided rows.
    *
-   * @param csvFilePath base CSV file path
-   * @param partNumber 1-based part number
-   * @return file path for the part
+   * <p>The rows are supplied to the CSV service only once. Any subsequent
+   * invocation of the supplier returns an empty list, signaling that no
+   * additional rows are available for the current partition.</p>
+   *
+   * @param partPath   destination path of the CSV partition
+   * @param typeClass  CSV DTO class used for serialization
+   * @param rows       rows to write to the partition
+   * @param csvProfile CSV serialization profile
+   * @param <T>        CSV export DTO type
+   * @throws IOException if the CSV partition cannot be created or written
    */
-  private Path buildPartPath(Path csvFilePath, int partNumber) {
-    String fileName = csvFilePath.getFileName().toString();
-    String partSuffix = "_part_%03d".formatted(partNumber);
-    String partFileName = fileName.endsWith(".csv")
-      ? fileName.replace(".csv", partSuffix + ".csv")
-      : fileName + partSuffix + ".csv";
-    return csvFilePath.resolveSibling(partFileName);
+  private <T extends CsvExportDto> void writePart(Path partPath,
+                                                  Class<T> typeClass,
+                                                  List<T> rows,
+                                                  String csvProfile) throws IOException {
+    AtomicBoolean delivered = new AtomicBoolean();
+
+    csvService.createCsv(
+      partPath,
+      typeClass,
+      () -> delivered.compareAndSet(false, true)
+        ? rows
+        : List.of(),
+      csvProfile
+    );
   }
 }
